// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Binaire 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Déchets
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            La collectivité est-elle chargée de la réalisation d'un "Programme local de prévention des déchets ménagers et assimilés" (PLPDMA) du fait de sa compétence collecte et/ou par délégation d'une autre collectivité ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Non
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/dechets"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Choix 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Mobilité
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            La collectivité a-t-elle la compétence voirie ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Oui sur l'ensemble du territoire
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/mobilite"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Proportion 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Développement économique
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            Quelle est la part de la collectivité dans la structure compétente en matière de développement économique ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            25%
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/developpement_economique"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Binaire Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Déchets
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            La collectivité est-elle chargée de la réalisation d'un "Programme local de prévention des déchets ménagers et assimilés" (PLPDMA) du fait de sa compétence collecte et/ou par délégation d'une autre collectivité ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              Non
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Oui
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/dechets"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Choix Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Mobilité
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            La collectivité a-t-elle la compétence voirie ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              Oui sur l'ensemble du territoire
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            Oui uniquement sur les trottoirs, parkings ou zones d'activités et industrielles
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/mobilite"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Proportion Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col overflow-hidden"
    >
      <div
        className="mb-4"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Développement économique
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100 rotate-180"
          />
        </button>
        <div
          className="max-w-full p-2 mb-4 bg-gray-100"
        >
          <p>
            Question : 
            Quelle est la part de la collectivité dans la structure compétente en matière de développement économique ?
          </p>
          <div
            className="max-w-full w-max p-2 border-2 mb-4 border-red-400"
          >
            <span
              className="line-through"
            >
              25%
            </span>
          </div>
          <div
            className="max-w-full w-max p-2 border-2 border-green-400"
          >
            50%
          </div>
        </div>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/developpement_economique"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;
